tests/error/test_undefined_proc.expected
tests/error/test_undefined_proc.fg:5:43: error: undefined procedure 'nonexistent_function'
tests/error/test_undefined_proc.fg:5:5: error: type mismatch in variable 'result': expected int, got error
